<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.thewizard.cjuliaol.bitchat.SignInActivity">

   <LinearLayout
       android:layout_gravity="center"
       android:padding="20dp"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <EditText
           android:id="@+id/user_name"
           android:hint="@string/name_hint"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <EditText
           android:id="@+id/user_password"
           android:hint="@string/password_hint"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <EditText
           android:id="@+id/user_number"
           android:hint="@string/number_hint"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

       <LinearLayout
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <Button
               android:id="@+id/sign_up_button"
               android:hint="@string/sign_up_button"
               android:layout_weight="50"
               android:layout_width="0dp"
               android:layout_height="wrap_content"/>
           <Button
               android:id="@+id/log_in_button"
               android:hint="@string/log_in_button"
               android:layout_weight="50"
               android:layout_width="0dp"
               android:layout_height="wrap_content"/>

       </LinearLayout>
   </LinearLayout>
    

</LinearLayout>
